--- a/jokedisplaying/src/main/res/values/strings.xml
+++ b/jokedisplaying/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">jokedisplaying</string>
+    <string name="missing_joke">Oops there was a problem loading the joke : (</string>
 </resources>
